Closed
Bug 777582
Opened 13 years ago
Closed 13 years ago
nsPrincipal deserializes members in wrong order
Categories
(Core :: Security: CAPS, defect)
Tracking
()
RESOLVED
FIXED
mozilla17
People
(Reporter: wchen, Assigned: wchen)
References
Details
(Whiteboard: [qa-])
Attachments
(1 file)
|
1.07 KB,
patch
|
mounir
:
review+
|
Details | Diff | Splinter Review |
The order in which members are deserialized do not match the order in which they are serialized.
| Assignee | ||
Comment 1•13 years ago
|
||
Attachment #645957 -
Flags: review?(mounir)
Comment 2•13 years ago
|
||
Is this a regression from bug 758258?
If so, we need to make sure we fix before this goes on Aurora (and in fact fix ASAP), since this presumably causes sessionstore dataloss...
Blocks: 758258
tracking-firefox17:
--- → ?
Updated•13 years ago
|
Attachment #645957 -
Flags: review?(mounir) → review+
| Assignee | ||
Updated•13 years ago
|
Keywords: checkin-needed
Comment 3•13 years ago
|
||
Flags: in-testsuite?
Keywords: checkin-needed
| Assignee | ||
Comment 4•13 years ago
|
||
(In reply to Boris Zbarsky (:bz) from comment #2)
> Is this a regression from bug 758258?
>
> If so, we need to make sure we fix before this goes on Aurora (and in fact
> fix ASAP), since this presumably causes sessionstore dataloss...
Yes, this is a regression caused by bug 758258. Here in particular: http://hg.mozilla.org/mozilla-central/diff/04d93909f3de/caps/src/nsPrincipal.cpp
Comment 5•13 years ago
|
||
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla17
Updated•13 years ago
|
status-firefox17:
--- → fixed
Flagging [qa-] as I don't think this needs QA verification. Please correct me if I am wrong.
Whiteboard: [qa-]
You need to log in
before you can comment on or make changes to this bug.
Description
•