Bug 777582 - Make nsPrincipal deserialize members in the order that they are serialized. r=mounir